atualizacao do dia 20/09/25
agora atualizamos o seed.js e arrumamos a localizacao do prisma, funcinando

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "prisma": "^6.16.2"
   },
   "dependencies": {
-    "@prisma/client": "^6.16.2"
+    "@prisma/client": "^6.16.2",
+    "bcryptjs": "^3.0.2"
   }
 }
