feat: Adicionar dependÃªncias e configuraÃ§Ãµes completas
- Adicionar cross-env para compatibilidade de ambiente
- Configurar package.json com scripts de teste
- Adicionar arquivo .env.test para testes
- Atualizar estrutura completa do projeto
- Todos os arquivos necessÃ¡rios para funcionamento

--- a/restaurante-backend/package.json
+++ b/restaurante-backend/package.json
@@ -9,7 +9,10 @@
   "prisma:migrate": "npx prisma migrate dev --name init",
   "prisma:studio": "npx prisma studio",
   "seed": "node prisma/seed.js",
-  "test": "jest"
+  "test": "cross-env NODE_ENV=test jest"
+ 
+
+
 },
 
   "keywords": [],
